--- a/src/app/modules/main/content/components/domains/domains.component.html
+++ b/src/app/modules/main/content/components/domains/domains.component.html
@@ -1,53 +1,56 @@
-<div class="w-full flex items-start px-4">
+<div class="w-full px-4">
+    <div class="w-full my-4 p-4">
 
-    <!-- Lists -->
-    <div class="w-full p-3">
-        <div class="w-full p-3 border border-gray-200 rounded-md my-4">
-            <!-- Title -->
-            <div class="w-full text-lg px-3 text-gray-800">Domains</div>
+        <!-- Domain List Block -->
+        <div class="w-full" *ngIf="domainList.length">
 
-            <div class="w-full flex flex-wrap mt-3">
-                <div class="w-6/12 flex justify-center p-2" *ngFor="let domain of domainList">
-                    <div class="w-full p-4 border border-gray-200 hover:bg-gray-50 hover:border-gray-300 rounded-lg">
-                        <div class="w-full flex justify-between items-center">
-                            <div class="text-gray-800 text-lg mb-2">{{domain.client}}</div>
-                            <a [routerLink]="['create']">
-                                <button mat-icon-button class="">
-                                    <mat-icon class="text-blue-500" matTooltip="Add New Domain">add_circle</mat-icon>
-                                </button>
-                            </a>
-                            
+            <!-- Title & Domain Actions -->
+            <div class="w-full flex justify-between items-start">
+
+                <!-- Title Content -->
+                <div class="w-8/12">
+                    <div class="w-fit font-bold flex items-center"><span class="text-blue-600 uppercase">Domains</span></div>
+                </div>
+
+                <div class="">
+                    <button mat-stroked-button class="" color="primary">+ Filter</button>
+                </div>
+            </div>
+
+            <div class="w-full mt-4">
+
+                <div class="w-full border border-gray-200 rounded-md">
+                    <div class="w-full flex justify-between px-4 py-2 bg-gray-50 border-b border-gray-200 rounded-t-md text-gray-800 font-bold text-xs">
+                        <div class="w-3/12">Domain URL</div>
+                        <div class="w-2/12">Environment</div>
+                        <div class="w-2/12">Client</div>
+                        <div class="w-2/12">Project</div>
+                        <div class="w-1/12">Status</div>
+                        <div class="w-1/12">Actions</div>
+                    </div>
+                    <div class="w-full flex justify-between items-center px-4 py-3 border-b border-gray-200 text-xs" *ngFor="let domain of domainList">
+                        <div class="w-3/12">
+                            <div class="text-blue-600">{{domain.domainURL}}</div>
+                            <div class="text-gray-600 mt-2"><span class="text-gray-700 font-bold">Version:</span> {{domain.branch}}</div>
                         </div>
-                        <div class="mb-4 flex justify-between items-end border-b border-gray-100 " *ngFor="let url of domain.domains">
-                            <div class="">
-                                <span class="text-xs text-xs rounded-lg">{{url.type}}</span>
-                                <div class="text-blue-500 font-bold pt-1">{{url.path}}</div>
-                                <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: {{url.branch}}</div>
-                            </div>
-                            <div class="flex items-start">
-                                <div class="">
-                                    <div class="text-right">
-                                        <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(url.status)">{{url.status}}</span>
-                                    </div>
-                                    <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Created On {{domain.createdDate}}</div>
-                                </div>
-                                <div class="ml-4">
-                                    <button mat-icon-button [matMenuTriggerFor]="domainMenu">
-                                        <mat-icon class="text-gray-700">more_vert</mat-icon>
-                                    </button>
-                                    <mat-menu #domainMenu="matMenu">
-                                        <button mat-menu-item>Edit</button>
-                                        <button mat-menu-item>Delete</button>
-                                      </mat-menu>
-                                </div>
-                            </div>
-                            
+                        <div class="w-2/12">{{filterRequiredIds('type', domain.environmentType)}}</div>
+                        <div class="w-2/12">
+                            <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../clients', domain.clientId]">{{filterRequiredIds('client', domain.clientId)}}</span>
+                        </div>
+                        <div class="w-2/12">
+                            <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../projects', domain.projectId]">{{filterRequiredIds('project', domain.projectId)}}</span>
+                        </div>
+                        <div class="w-1/12">
+                            <span class="w-fit rounded-full uppercase py.05 px-2 text-xs" [ngClass]="getStatusStyle(filterRequiredIds('status', domain.status))">{{filterRequiredIds('status', domain.status)}}</span>
+                        </div>
+                        <div class="w-1/12">
+                            <button mat-icon-button>
+                                <mat-icon>more_vert</mat-icon>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
-    
 </div>
