Domains Table added on client profile view page.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,3 +83,7 @@ body { margin: 0; }
 .mdc-text-field--outlined .mdc-floating-label {
     font-size: 0.85rem !important;
 }
+
+.mat-mdc-tab-header {
+    background-color: white;
+}
