--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -84,10 +84,10 @@
     </div>
 
     <!-- Advanced details block -->
-    <div class="w-8/12 h-full" *ngIf="clientDetails">
+    <div class="w-8/12 h-full bg-gray-100" *ngIf="clientDetails">
 
         <!-- Header -->
-        <div class="w-full p-4 flex justify-between items-center">
+        <div class="w-full p-4 flex justify-between items-center bg-white">
             <div class="">
                 <div class="text-lg">Client Aspects</div>
                 <div class="text-xs text-gray-600">View all the aspects that align in terms of services or products.</div>
@@ -100,14 +100,14 @@
 
 
         <!-- Client Associations: Projects, Domains, Releases, Demos -->
-        <div class="w-full h-full">
+        <div class="w-full h-fit">
             <mat-tab-group class="h-full" mat-align-tabs="start">
 
                 <!-- Projects Tab -->
                 <mat-tab label="Projects">
                     <div class="w-full p-4 border-t border-gray-200">
-                        <div class="w-full border border-gray-200 rounded-md" *ngIf="projectsList?.length">
-                            <div class="w-full flex text-xs font-bold justify-between items-center px-4 py-2 rounded-t-md border-b border-gray-100 bg-gray-50 text-gray-600">
+                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="projectsList?.length">
+                            <div class="w-full flex text-xs font-bold justify-between items-center px-4 py-2 rounded-t-md border-b border-gray-200 bg-gray-50 text-gray-600">
                                 <div class="w-4/12">Project Name</div>
                                 <div class="w-3/12">Project Manager</div>
                                 <div class="w-2/12">Team Members</div>
@@ -157,31 +157,42 @@
 
                 <!-- Domains Tab -->
                 <mat-tab label="Domains">
-                    <div class="w-full px-4 flex flex-wrap border-t border-gray-200">
-                        <div class="w-6/12 p-4" *ngFor="let domain of clientProfileData.domains">
-                            <div class="flex justify-between items-center w-full border border-gray-200 rounded-md p-4 hover:border-gray-400">
-                                <div class="">
-                                    <span class="text-xs text-xs rounded-lg">{{domain.type}}</span>
-                                    <div class="text-blue-500 font-bold pt-4">{{domain.path}}</div>
-                                    <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: {{domain.branch}}</div>
+                    <div class="w-full h-full p-4 flex flex-wrap border-t border-gray-200">
+                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="domainsList?.length">
+                            <div class="w-full flex justify-between px-4 py-2 bg-gray-50 border-b border-gray-200 rounded-t-md text-gray-800 font-bold text-xs">
+                                <div class="w-4/12">Domain URL</div>
+                                <div class="w-2/12">Environment</div>
+                                <div class="w-4/12">Project</div>
+                                <div class="w-1/12">Status</div>
+                                <div class="w-1/12">Actions</div>
+                            </div>
+                            <div class="w-full flex justify-between items-center px-4 py-3 border-b border-gray-200 text-xs" *ngFor="let domain of domainsList">
+                                <div class="w-4/12">
+                                    <div class="text-blue-600">{{domain.domainURL}}</div>
+                                    <div class="text-gray-600 mt-2"><span class="text-gray-700 font-bold">Version:</span> {{domain.branch}}</div>
                                 </div>
-                                <div class="flex items-start">
-                                    <div class="">
-                                        <div class="text-right">
-                                            <span class="text-right text-xs px-3 py-0.5 rounded-full uppercase" [ngClass]="getStatusStyle(domain.status)">{{domain.status}}</span>
-                                        </div>
-                                        <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Release Date: {{domain.createdDate}}</div>
-                                    </div>
-                                    <div class="ml-4">
-                                        <button mat-icon-button [matMenuTriggerFor]="instanceMenu">
-                                            <mat-icon class="text-gray-700">more_vert</mat-icon>
-                                        </button>
-                                        <mat-menu #instanceMenu="matMenu">
-                                            <button mat-menu-item>Edit</button>
-                                            <button mat-menu-item>Delete</button>
-                                          </mat-menu>
-                                    </div>
+                                <div class="w-2/12">
+                                    <span class="px-2 py-1 bg-gray-50 border border-gray-200 rounded-md">{{filterRequiredIds('domain_type', domain.environmentType)}}</span>
                                 </div>
+                                <div class="w-4/12">
+                                    <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../../projects', domain.projectId]">{{filterRequiredIds('project', domain.projectId)}}</span>
+                                </div>
+                                <div class="w-1/12">
+                                    <span class="w-fit rounded-full uppercase py.05 px-2 text-xs" [ngClass]="getStatusStyle(filterRequiredIds('domain_status', domain.status))">{{filterRequiredIds('domain_status', domain.status)}}</span>
+                                </div>
+                                <div class="w-1/12">
+                                    <button mat-icon-button>
+                                        <mat-icon>more_vert</mat-icon>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- If no projects created under client -->
+                        <div class="w-full py-14" *ngIf="!domainsList?.length">
+                            <div class="text-gray-600 text-center">Add required domains for {{clientDetails.clientName}}.</div>
+                            <div class="mt-4 flex justify-center">
+                                <button mat-flat-button class="" color="primary" [routerLink]="['../../domains/create']">Add New Domain</button>
                             </div>
                         </div>
                     </div>
@@ -190,7 +201,7 @@
                 <!-- Releases Tab -->
                 <mat-tab label="Releases">
                     <div class="w-full p-4 border-t border-gray-200">
-                        <div class="w-full border border-gray-200 rounded-md" *ngIf="releasesList.length">
+                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="releasesList.length">
 
                             <!-- Filter Block -->
                             <div class="w-full p-4 border-b border-gray-200 flex justify-between">
@@ -396,13 +407,13 @@
 
                 <!-- Demos Tab -->
                 <mat-tab label="Demos">
-                    <div class="w-full flex flex-wrap items-center px-4 border-t border-gray-200">
+                    <div class="w-full h-screen flex flex-wrap content-start px-4 border-t border-gray-200 bg-white">
 
                         <!-- In Pgoress -->
                         <div class="w-full flex justify-center p-3 mt-6">
                             <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                         </div>
-                        <div class="w-full text-center text-gray-600 -mt-28 font-bold">
+                        <div class="w-full text-center text-gray-600 -mt-14 font-bold">
                             Feature Coming Soon...
                         </div>
                     </div>
@@ -410,13 +421,13 @@
 
                 <!-- Timeline Tab -->
                 <mat-tab label="Timeline">
-                    <div class="w-full flex flex-wrap items-center px-4 border-t border-gray-200">
+                    <div class="w-full h-screen flex flex-wrap content-start px-4 border-t border-gray-200 bg-white">
 
                         <!-- In Pgoress -->
                         <div class="w-full flex justify-center p-3 mt-6">
                             <img class="w-3/12" src="assets/gifs/dev-progress.gif">
                         </div>
-                        <div class="w-full text-center text-gray-600 -mt-28 font-bold">
+                        <div class="w-full text-center text-gray-600 -mt-14 font-bold">
                             Feature Coming Soon...
                         </div>
                     </div>
