--- a/src/app/modules/main/content/components/domains/domains.component.html
+++ b/src/app/modules/main/content/components/domains/domains.component.html
@@ -33,7 +33,9 @@
                             <div class="text-blue-600">{{domain.domainURL}}</div>
                             <div class="text-gray-600 mt-2"><span class="text-gray-700 font-bold">Version:</span> {{domain.branch}}</div>
                         </div>
-                        <div class="w-2/12">{{filterRequiredIds('type', domain.environmentType)}}</div>
+                        <div class="w-2/12">
+                            <span class="px-2 py-1 bg-gray-50 border border-gray-200 rounded-md">{{filterRequiredIds('type', domain.environmentType)}}</span>
+                        </div>
                         <div class="w-2/12">
                             <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../clients', domain.clientId]">{{filterRequiredIds('client', domain.clientId)}}</span>
                         </div>
