--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -84,7 +84,7 @@
     </div>
 
     <!-- Advanced details block -->
-    <div class="w-8/12 h-full bg-gray-100" *ngIf="clientDetails">
+    <div class="w-8/12 h-full bg-gray-50" *ngIf="clientDetails">
 
         <!-- Header -->
         <div class="w-full p-4 flex justify-between items-center bg-white">
@@ -106,44 +106,65 @@
                 <!-- Projects Tab -->
                 <mat-tab label="Projects">
                     <div class="w-full p-4 border-t border-gray-200">
-                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="projectsList?.length">
-                            <div class="w-full flex text-xs font-bold justify-between items-center px-4 py-2 rounded-t-md border-b border-gray-200 bg-gray-50 text-gray-600">
-                                <div class="w-4/12">Project Name</div>
-                                <div class="w-3/12">Project Manager</div>
-                                <div class="w-2/12">Team Members</div>
-                                <div class="w-2/12">Status</div>
-                                <div class="w-1/12">Action</div>
+
+                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="domainsList?.length">
+
+                            <!-- Filter Block -->
+                            <div class="w-full p-4 border-b border-gray-200 flex justify-between">
+                                <div class="">
+                                    <div class="text-lg">Projects List</div>
+                                    <div class="text-xs text-gray-500">Navigate Your Project Portfolio, where Initiatives Thrive and Progress Unfold</div>
+                                </div>
+                                <div class="">
+                                    <button mat-stroked-button class="" color="primary">+ Filter</button>
+                                </div>
+                                
                             </div>
-                            <div class="w-full px-4 py-2 border-b border-gray-200" *ngFor="let project of projectsList">
-                                <div class="w-full text-xs flex justify-between items-center">
-                                    <div class="w-4/12">
-                                        <span class="hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../projects', project._id]">{{project.projectName}}</span>
-                                    </div>
-                                    <div class="w-3/12">
-                                        <span class="hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', project.projectManagerId]">{{filterRequiredIds('teamMember', project.projectManagerId)}}</span>
-                                    </div>
-                                    <div class="w-2/12">{{project.teamMembers.length}} Members</div>
-                                    <div class="w-2/12">
-                                        <div class="w-fit px-2 py-0.5 uppercase text-xs rounded-full" [ngClass]="getStatusStyle(filterRequiredIds('project_status', project.statusId))">{{filterRequiredIds('project_status', project.statusId)}}</div>
-                                    </div>
-                                    <div class="w-1/12 flex">
-                                        <button mat-icon-button class="text-gray-600" [matMenuTriggerFor]="clientProjectMenu">
-                                            <mat-icon class="text-base">more_vert</mat-icon>
-                                        </button>
-                                        <mat-menu #clientProjectMenu="matMenu">
-                                            <div class="px-4 py-2 flex cursor-pointer items-center" matRipple [routerLink]="['../../projects', project._id]">
-                                                <mat-icon class="text-base mr-2">remove_red_eye</mat-icon>
-                                                <div class="text-sm">View</div>
-                                              </div>
-                                            <div class="px-4 py-2 flex cursor-pointer items-center" matRipple>
-                                              <mat-icon class="text-base mr-2">edit</mat-icon>
-                                              <div class="text-sm">Edit</div>
-                                            </div>
-                                        </mat-menu>
+
+
+                            <div class="w-full" *ngIf="projectsList?.length">
+                                <div class="w-full flex text-xs font-bold justify-between items-center px-4 py-2 border-b border-gray-200 bg-gray-50 text-gray-600">
+                                    <div class="w-4/12">Project Name</div>
+                                    <div class="w-3/12">Project Manager</div>
+                                    <div class="w-2/12">Team Members</div>
+                                    <div class="w-2/12">Status</div>
+                                    <div class="w-1/12">Action</div>
+                                </div>
+                                <div class="w-full px-4 py-2 border-b border-gray-200" *ngFor="let project of projectsList">
+                                    <div class="w-full text-xs flex justify-between items-center">
+                                        <div class="w-4/12">
+                                            <span class="hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../projects', project._id]">{{project.projectName}}</span>
+                                        </div>
+                                        <div class="w-3/12">
+                                            <span class="hover:underline hover:text-blue-600 cursor-pointer w-fit" [routerLink]="['../../admin/members', project.projectManagerId]">{{filterRequiredIds('teamMember', project.projectManagerId)}}</span>
+                                        </div>
+                                        <div class="w-2/12">{{project.teamMembers.length}} Members</div>
+                                        <div class="w-2/12">
+                                            <div class="w-fit px-2 py-0.5 uppercase text-xs rounded-full" [ngClass]="getStatusStyle(filterRequiredIds('project_status', project.statusId))">{{filterRequiredIds('project_status', project.statusId)}}</div>
+                                        </div>
+                                        <div class="w-1/12 flex">
+                                            <button mat-icon-button class="text-gray-600" [matMenuTriggerFor]="clientProjectMenu">
+                                                <mat-icon class="text-base">more_vert</mat-icon>
+                                            </button>
+                                            <mat-menu #clientProjectMenu="matMenu">
+                                                <div class="px-4 py-2 flex cursor-pointer items-center" matRipple [routerLink]="['../../projects', project._id]">
+                                                    <mat-icon class="text-base mr-2">remove_red_eye</mat-icon>
+                                                    <div class="text-sm">View</div>
+                                                  </div>
+                                                <div class="px-4 py-2 flex cursor-pointer items-center" matRipple>
+                                                  <mat-icon class="text-base mr-2">edit</mat-icon>
+                                                  <div class="text-sm">Edit</div>
+                                                </div>
+                                            </mat-menu>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+
                         </div>
+
+                        
+                        
 
                         <!-- If no projects created under client -->
                         <div class="w-full py-14" *ngIf="!projectsList?.length">
@@ -158,34 +179,55 @@
                 <!-- Domains Tab -->
                 <mat-tab label="Domains">
                     <div class="w-full h-full p-4 flex flex-wrap border-t border-gray-200">
+
                         <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="domainsList?.length">
-                            <div class="w-full flex justify-between px-4 py-2 bg-gray-50 border-b border-gray-200 rounded-t-md text-gray-800 font-bold text-xs">
-                                <div class="w-4/12">Domain URL</div>
-                                <div class="w-2/12">Environment</div>
-                                <div class="w-4/12">Project</div>
-                                <div class="w-1/12">Status</div>
-                                <div class="w-1/12">Actions</div>
+
+                            <!-- Filter Block -->
+                            <div class="w-full p-4 border-b border-gray-200 flex justify-between">
+                                <div class="">
+                                    <div class="text-lg">Domains List</div>
+                                    <div class="text-xs text-gray-500">Simplify Your Instance Management, the hub for all Environments types.</div>
+                                </div>
+                                <div class="">
+                                    <button mat-stroked-button class="" color="primary">+ Filter</button>
+                                </div>
+                                
                             </div>
-                            <div class="w-full flex justify-between items-center px-4 py-3 border-b border-gray-200 text-xs" *ngFor="let domain of domainsList">
-                                <div class="w-4/12">
-                                    <div class="text-blue-600">{{domain.domainURL}}</div>
-                                    <div class="text-gray-600 mt-2"><span class="text-gray-700 font-bold">Version:</span> {{domain.branch}}</div>
+
+
+                            <div class="w-full" *ngIf="domainsList?.length">
+                                <div class="w-full flex justify-between px-4 py-2 bg-gray-50 border-b border-gray-200 text-gray-800 font-bold text-xs">
+                                    <div class="w-4/12">Domain URL</div>
+                                    <div class="w-2/12">Environment</div>
+                                    <div class="w-4/12">Project</div>
+                                    <div class="w-1/12">Status</div>
+                                    <div class="w-1/12">Actions</div>
                                 </div>
-                                <div class="w-2/12">
-                                    <span class="px-2 py-1 bg-gray-50 border border-gray-200 rounded-md">{{filterRequiredIds('domain_type', domain.environmentType)}}</span>
-                                </div>
-                                <div class="w-4/12">
-                                    <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../../projects', domain.projectId]">{{filterRequiredIds('project', domain.projectId)}}</span>
-                                </div>
-                                <div class="w-1/12">
-                                    <span class="w-fit rounded-full uppercase py.05 px-2 text-xs" [ngClass]="getStatusStyle(filterRequiredIds('domain_status', domain.status))">{{filterRequiredIds('domain_status', domain.status)}}</span>
-                                </div>
-                                <div class="w-1/12">
-                                    <button mat-icon-button>
-                                        <mat-icon>more_vert</mat-icon>
-                                    </button>
+                                <div class="w-full flex justify-between items-center px-4 py-3 border-b border-gray-200 text-xs" *ngFor="let domain of domainsList">
+                                    <div class="w-4/12">
+                                        <div class="text-blue-600">
+                                            <a class="hover:text-blue-700 hover:underline" href="{{domain.domainURL}}" target="_blank">{{domain.domainURL}}</a>
+                                        </div>
+                                        <div class="text-gray-600 mt-2"><span class="text-gray-700 font-bold">Version:</span> {{domain.branch}}</div>
+                                    </div>
+                                    <div class="w-2/12">
+                                        <span class="px-2 py-1 bg-gray-50 border border-gray-200 rounded-md">{{filterRequiredIds('domain_type', domain.environmentType)}}</span>
+                                    </div>
+                                    <div class="w-4/12">
+                                        <span class="hover:text-blue-600 hover:underline cursor-pointer" [routerLink]="['../../projects', domain.projectId]">{{filterRequiredIds('project', domain.projectId)}}</span>
+                                    </div>
+                                    <div class="w-1/12">
+                                        <span class="w-fit rounded-full uppercase py.05 px-2 text-xs" [ngClass]="getStatusStyle(filterRequiredIds('domain_status', domain.status))">{{filterRequiredIds('domain_status', domain.status)}}</span>
+                                    </div>
+                                    <div class="w-1/12">
+                                        <button mat-icon-button>
+                                            <mat-icon>more_vert</mat-icon>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
+
+                            
                         </div>
 
                         <!-- If no projects created under client -->
