Bug fixes, minor UI updates.

--- a/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
+++ b/src/app/modules/main/content/components/clients/components/client-profile/client-profile.component.html
@@ -107,7 +107,7 @@
                 <mat-tab label="Projects">
                     <div class="w-full p-4 border-t border-gray-200">
 
-                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="domainsList?.length">
+                        <div class="w-full border border-gray-200 rounded-md bg-white" *ngIf="projectsList?.length">
 
                             <!-- Filter Block -->
                             <div class="w-full p-4 border-b border-gray-200 flex justify-between">
