--- a/src/app/modules/main/navigation/navigation.component.html
+++ b/src/app/modules/main/navigation/navigation.component.html
@@ -13,7 +13,7 @@
             <button mat-flat-button class="text-white text-sm py-1" color="primary" (click)="navigationActions()">
                 <mat-icon class="-ml-2">add</mat-icon> New
             </button>
-            <div class="rounded-full py-1.5 px-3 bg-yellow-100 text-yellow-700 font-bold shadow-md ml-6 cursor-pointer" [matMenuTriggerFor]="menu">S</div>
+            <div class="rounded-full py-1.5 px-3 bg-gray-100 text-gray-700 border-2 border-gray-700 font-bold shadow-md ml-6 cursor-pointer" [matMenuTriggerFor]="menu">{{memberDetails?.firstName[0]}}</div>
             <mat-menu #menu="matMenu">
                 <div class="w-64 text-gray-700">
                     <div class="w-full border-b border-gray-200 bg-gray-100 px-4 py-2 -mt-2">
