--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -145,7 +145,7 @@
                             </form>
                         </div>
                         <div class="ml-4 flex justify-end">
-                            <button mat-flat-button color="primary" class="">Proceed for Sign-off  <mat-icon class="ml-2" iconPositionEnd>keyboard_arrow_right</mat-icon></button>
+                            <button mat-flat-button color="primary" class="" [routerLink]="['sign-off']">Proceed for Sign-off  <mat-icon class="ml-2" iconPositionEnd>keyboard_arrow_right</mat-icon></button>
                         </div>
                     </div>
                 </div>
