--- a/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
@@ -13,6 +13,24 @@
                 </div>
 
             </div>
+
+            <!-- Sign-off Workflow -->
+            <div class="w-full border border-bgray-200 rounded-md my-4">
+
+                <!-- Release Sign-off title -->
+                <div class="w-full px-4 py-2 border-b border-gray-200">
+                    <div class="text-lg">Release Sign-Off</div>
+                    <div class="w-full text-xs text-gray-600">Certifying Success: Every Detail Counts</div>
+                </div>
+
+                <div class="w-full flex" style="height: 70vh;">
+                    <!-- Workflow Steps -->
+                    <div class="w-3/12 p-4 rounded-tl-md border-r border-gray-200"></div>
+
+                    <!-- Workflow Step Content -->
+                    <div class="w-9/12 bg-gray-50 p-4 rounded-br-md"></div>
+                </div>
+            </div>
         </div>
     </div>
 
