--- a/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
@@ -27,33 +27,45 @@
                     <!-- Workflow Steps -->
                     <div class="w-3/12 p-4 rounded-tl-md border-r border-gray-200">
                         <div class="w-full border border-blue-200 rounded-md flex mb-4">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-blue-200 bg-blue-600 flex justify-center items-center text-white">1</div>
-                            <div class="w-10/12 p-4">Examine Release Aspects</div>
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-blue-200 bg-blue-600 flex justify-center items-center text-white">
+                                <mat-icon>my_library_books</mat-icon>
+                            </div>
+                            <div class="w-10/12 p-4">Examine</div>
                         </div>
 
                         <div class="w-full border border-gray-200 rounded-md flex mb-4">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">2</div>
-                            <div class="w-10/12 p-4">Re-arrange Release Aspects</div>
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-600 flex justify-center items-center text-white">
+                                <mat-icon>view_list</mat-icon>
+                            </div>
+                            <div class="w-10/12 p-4">Preview: Release Notes</div>
                         </div>
 
                         <div class="w-full border border-gray-200 rounded-md flex mb-4">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">3</div>
-                            <div class="w-10/12 p-4">Preview Release Notes</div>
-                        </div>
-
-                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">4</div>
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-600 flex justify-center items-center text-white">
+                                <mat-icon>assignment_turned_in</mat-icon>
+                            </div>
                             <div class="w-10/12 p-4">Sign-Off Approvals</div>
                         </div>
 
                         <div class="w-full border border-gray-200 rounded-md flex mb-4">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">5</div>
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-600 flex justify-center items-center text-white">
+                                <mat-icon>file_download</mat-icon>
+                            </div>
                             <div class="w-10/12 p-4">View & Download</div>
+                        </div>
+
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-600 flex justify-center items-center text-white">
+                                <mat-icon>rate_review</mat-icon>
+                            </div>
+                            <div class="w-10/12 p-4">Feedback</div>
                         </div>
                     </div>
 
                     <!-- Workflow Step Content -->
-                    <div class="w-9/12 bg-gray-50 p-4 rounded-br-md"></div>
+                    <div class="w-9/12 bg-gray-50 p-4 rounded-br-md">
+                        <div class="w-full p-4 border border-gray-200 rounded-md bg-white"></div>
+                    </div>
                 </div>
             </div>
         </div>
