--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -68,7 +68,8 @@
             <div class="w-full text-lg px-2 text-gray-800">Release Stats</div>
 
             <!-- Stats Block -->
-            <div class="w-full flex mt-4 p-1">
+            <app-pie-chart></app-pie-chart>
+            <!-- <div class="w-full flex mt-4 p-1">
                 <div class="w-3/12 p-1">
                     <div class="rounded-md p-4 py-2" [ngClass]="getStatusStyle('Completed')">
                         <div class="text-xs">Completed</div>
@@ -93,7 +94,7 @@
                         <div class="mt-6 text-3xl text-right">3</div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Release Comments -->
