--- a/src/app/modules/shared/components/charts/pie-chart/pie-chart.component.html
+++ b/src/app/modules/shared/components/charts/pie-chart/pie-chart.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="isChartEnabled">
     <apx-chart
-      [series]="chartOptions?.series!"
-      [chart]="chartOptions?.chart!"
-      [labels]="chartOptions?.labels!"
-      [responsive]="chartOptions?.responsive!">
+      [series]="chartOptions.series!"
+      [chart]="chartOptions.chart!"
+      [labels]="chartOptions.labels!"
+      [colors]="chartOptions.colors!"
+      [responsive]="chartOptions.responsive!">
     </apx-chart>
   </div>
