--- a/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
@@ -26,8 +26,11 @@
                 <div class="w-full flex" style="height: 70vh;">
                     <!-- Workflow Steps -->
                     <div class="w-3/12 p-4 rounded-tl-md border-r border-gray-200">
-                        <div class="w-full border border-blue-200 rounded-md flex mb-4" *ngFor="let menu of signOffProcessMenu" (click)="activeComponent = menu.component">
-                            <div class="w-2/12 p-4 border-r rounded-l-md border-blue-200 bg-blue-600 flex justify-center items-center text-white">
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4 hover:text-gray-600 hover:font-bold hover:bg-gray-50 hover:cursor-pointer"
+                        [ngClass]="{'text-blue-600 font-bold bg-gray-50 !border-blue-600': activeComponent === menu.component}" 
+                        *ngFor="let menu of signOffProcessMenu" 
+                        (click)="activeComponent = menu.component">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-blue-600 bg-blue-600 flex justify-center items-center text-white">
                                 <mat-icon>{{menu.icon}}</mat-icon>
                             </div>
                             <div class="w-10/12 p-4">{{menu.name}}</div>
